--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alpaca-py>=0.39.4",
     "backtrader>=1.9.78.123",
+    "click>=8.1.8",
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
@@ -13,3 +15,6 @@ dependencies = [
     "scikit-learn>=1.6.1",
     "statsmodels>=0.14.4",
 ]
+
+[project.scripts]
+sq = "cli:entry"
