--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "pywavelets>=1.8.0",
     "scikit-learn>=1.6.1",
     "statsmodels>=0.14.4",
+    "websockets>=15.0.1",
+    "yfinance>=0.2.55",
 ]
 
 [project.scripts]
