--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
+    "plotly>=6.0.1",
     "pywavelets>=1.8.0",
     "scikit-learn>=1.6.1",
     "statsmodels>=0.14.4",
